--- a/HA/Resources/layout/activity_main.xml
+++ b/HA/Resources/layout/activity_main.xml
@@ -5,4 +5,8 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+    <android.webkit.WebView
+         android:id="@+id/wv"
+         android:layout_width="match_parent"
+         android:layout_height="match_parent" />
 </LinearLayout>
